--- a/style.css
+++ b/style.css
@@ -579,7 +579,77 @@ section.facts{
         margin-right: 10rem;
         margin-left: 10rem;
     }
-    
+    /* Bordered form */
+form {
+  border: 3px solid #f1f1f1;
+}
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+/* Add a hover effect for buttons */
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the avatar image inside this container */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+/* Avatar image */
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+/* Add padding to containers */
+.container {
+  padding: 16px;
+}
+
+/* The "Forgot password" text */
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+    display: block;
+    float: none;
+  }
+  .cancelbtn {
+    width: 100%;
+  }
+}
 }
 @media(max-width:761px){
     .meeting{
@@ -600,6 +670,41 @@ section.facts{
     }
     
 }
+/********** Footer CSS Starts **********/  
+.footer {
+     background-color:#1f2836;
+     padding:70px 0px;
+     width:100%;
+     float:left;
+}
+ .footer-sect {
+     width:33%;
+     float:left;
+}
+ .footer-sect h2 {
+     color:#fff;
+     margin-bottom: 20px;
+}
+ .footer-sect p {
+     color: #fff;
+     line-height: 22px;
+     padding:0px 30px 20px 0px;
+}
+ .footer-menu li {
+     width: 50%;
+     float: left;
+     margin-bottom: 10px;
+}
+ .footer-menu li a {
+     color:#fff;
+     text-decoration: none;
+}
+ .footer-contact li {
+     margin-bottom:15px;
+     list-style: none;
+     color: #fff;
+}
+/********** Footer CSS Ends **********/
 @media(max-width:895px){
     
     .courses .container .slider{
